--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -81,7 +81,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
