--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -81,7 +81,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#illustrations#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -326,7 +326,8 @@
                     </h6>
                     <div class="d-flex justify-content-between mb-5 pb-5 row">
                         <div class="col-md-7">
-                            <p>Doing this on both our Desktop and Mobile versions, we did discover some things that we could change to make the use of the website more apparent. The tests revealed that most of our redesign communicated the intention fairly well, had a pleasing look, and clear navigation.</p>
+                            <p>Doing this on both our Desktop and Mobile versions, we did discover some things that we could change to make the use of the website more apparent.</p>
+                            <!-- <p>The tests revealed that most of our redesign communicated the intention fairly well, had a pleasing look, and clear navigation.</p> -->
                             <div class="fw-bold mt-5">Five-second usablity test questions:</div>
                             <ul>
                                 <li>What is the purpose of the page?</li>
@@ -416,7 +417,7 @@
                         <p>For the redesign of the homepage, we kept much of the information from the original but we organized it in a more simplified way.</p> 
                         <p>The fact that users in our last test felt less overwhelmed indicates that organization and design plays a major role is users reactions to being presented with lots of information.</p>
                         <p>One factor that did not change between tests is the users comfortability with the subject matter. The lack of knowledge about investing in securities made users still slightly uncomfortable navigating the site.</p>
-                        <p>Throughout this project, our team worked hard to organize the extensive content on the site in a more simplified way. All the while, struggling with the subject matter as well. However, our final user tests revealed we accomplished our goal in redesigning our site to make it look like a user-friendly, legitimate government site.</p>
+                        <!-- <p>Throughout this project, our team worked hard to organize the extensive content on the site in a more simplified way. All the while, struggling with the subject matter as well. However, our final user tests revealed we accomplished our goal in redesigning our site to make it look like a user-friendly, legitimate government site.</p> -->
                     </div>
                 </div>
     
