--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -81,7 +81,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -241,7 +241,7 @@
                     <div class="mb-lg-3">
                         <p>Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.</p>
                         <p>Our value proposition canvas allowed us to identify how those features would help users current pains with preparing lessons and what users would gain from using our app.</p>
-                        <p>We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.</p>
+                        <!-- <p>We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.</p> -->
                     </div>
                     <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
                 </div>
@@ -281,7 +281,7 @@
                     <div class="col-md-6 align-self-center me-md-5">
                         <p>We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b></p>
                         <p>The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.</p>
-                        <p>With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list.</p>
+                        <!-- <p>With addition suggestions, we added in certain features to help including a back button on every page, signing up for a new account bringing you straight to the home page, and turning student grades and participation records from multiple pages into one expanded list.</p> -->
                     </div>
                     <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
                 </div>
