--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-        <title>Leon Dinh - Product Designer</title>
+        <meta name="Leon Dinh" content="Portfolio of CAD Designser and 3D Artist, Leon Dinh" />
+        <title>Leon Dinh - CAD Designser</title>
 
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="./favicon2.ico" />
@@ -76,7 +76,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                     <div class=" ">
                         <h1 class="my-0 mb-3 topFade">Leon Dinh</h1>
                         <h2 class="mt-2">
-                            <p class="mb-2 fw-light fadeIn-1">product designer and developer </p>
+                            <p class="mb-2 fw-light fadeIn-1">Product Designer and developer </p>
                             <p class="mb-2 fw-light fadeIn-2">specialized in </p>
                             <p class="mb-2 fw-light fadeIn-1">UX/UI, Illustrations, and 3D.</p>
                         </h2>
@@ -356,8 +356,8 @@
                         </a>
                     </div>
 
-                    <!-- Product design -->
-                    <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="productDesign">Product Design</h4>
+                    <!-- CAD Designs -->
+                    <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="productDesign">CAD Designs</h4>
 
                     <!-- Boring Box -->
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">Boring Box<span class="iconFA"></span></button>
