updated AfA title

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-        <title>UX_ArtsForAll.com Redesign</title>
+        <title>UX_Arts-for-all.org Redesign</title>
 
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="../favicon2.ico" />
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="#">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -102,7 +102,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center">
                 <div class="d-flex">
                     <div class="col-md-10">
-                        <h1 class="my-0 mb-4">ArtsForAll.com</h1>
+                        <h1 class="my-0 mb-4">Arts-for-all.org</h1>
                         <h2 class="my-2 col-lg-6 col-md-8 fw-normal fadeIn-2">
                             Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts. 
                         </h2>
