--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -459,7 +459,7 @@
             <div class="mb-sm-4 UXCaseSwap">
                 <div class="pt-4 pt-sm-0">
                     <p>Previous:</p>
-                    <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
+                    <a class="hvr-sweep" href="./UX_AFA.html">Arts-for-all.org</a>
                 </div>
             </div>
         </section>
