--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="#">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
