--- a/About.html
+++ b/About.html
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
