--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -483,7 +483,7 @@
             </div>
             <div class="pt-4 pt-sm-0">
                 <p>Next:</p>
-                <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
+                <a class="hvr-sweep" href="./UX_AFA.html">Arts-for-all.org</a>
             </div>
         </div>
         </section>
