--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <!-- ArtsForAll.com -->
+                <!-- Arts-for-all.org -->
                 <div class="row gx-0 UXCase fade-in">
                     <div class="order-0 order-lg-0 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_AFA.html">
@@ -165,7 +165,7 @@
                         </a>
                     </div>
                     <div class="order-1 order-lg-0 col-lg-6 featured-text-right">
-                        <h4 class="UXCaseTitle">ArtsForAll.com</h4>
+                        <h4 class="UXCaseTitle">Arts-for-all.org</h4>
                         <p class="text-black-50 mb-sm-4">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
                         <div class="UXCaseLabel mb-sm-4">
                             <p>UX/UI</p>
