--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="Leon Dinh" content="Portfolio of Portfolio Designer and 3D Artist, Leon Dinh" />
-        <title>Leon Dinh - Portfolio Designer</title>
+        <meta name="Leon Dinh" content="Product Designer and 3D Artist" />
+        <title>Leon Dinh - Product Designer Portfolio</title>
 
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="./favicon2.ico" />
