--- a/About.html
+++ b/About.html
@@ -137,8 +137,10 @@
 
                     <!-- Experience -->
                     <h6 class="playFair my-5 pt-5 fade-in">Experience</h6>
-                    <h5 class="lato pt-3">Huntington Ingalls Industries</h5>
-                    <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
+                    <h5 class="lato pt-3">Centene Corporation</h5>
+                    <p class="lato pb-4">UX Designer &nbsp; &#x2022; &nbsp; Sep 2022 - Present</p>
+                    <h5 class="lato">Huntington Ingalls Industries</h5>
+                    <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Sep 2022</p>
                     <h5 class="lato">Corys Thunder</h5>
                     <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Sep 2016 - Apr 2019</p>
                     <h5 class="lato">Delta V Engineering</h5>
