--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-        <title>Leon Dinh - Product Designer</title>
+        <meta name="Leon Dinh" content="Product Designer and 3D Artist" />
+        <title>Leon Dinh - Product Designer Portfolio</title>
 
         <!-- Favicon -->
         <link rel="icon" type="image/x-icon" href="./favicon2.ico" />
@@ -66,7 +66,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -76,7 +76,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -99,7 +99,7 @@
                     <div class=" ">
                         <h1 class="my-0 mb-3 topFade">Leon Dinh</h1>
                         <h2 class="mt-2">
-                            <p class="mb-2 fw-light fadeIn-1">product designer and developer </p>
+                            <p class="mb-2 fw-light fadeIn-1">Product Designer and developer </p>
                             <p class="mb-2 fw-light fadeIn-2">specialized in </p>
                             <p class="mb-2 fw-light fadeIn-1">UX/UI, Illustrations, and 3D.</p>
                         </h2>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
 
-                <!-- ArtsForAll.com -->
+                <!-- Arts-for-all.org -->
                 <div class="row gx-0 UXCase fade-in">
                     <div class="order-0 order-lg-0 col-lg-6 UXCaseImg">
                         <a href="./CaseStudies/UX_AFA.html">
@@ -165,7 +165,7 @@
                         </a>
                     </div>
                     <div class="order-1 order-lg-0 col-lg-6 featured-text-right">
-                        <h4 class="UXCaseTitle">ArtsForAll.com</h4>
+                        <h4 class="UXCaseTitle">Arts-for-all.org</h4>
                         <p class="text-black-50 mb-sm-4">Non-profit organization that offers accessible artistic opportunities to children in the New York City area who face socio-economic, physical, or emotional barriers to exploring the arts.</p>
                         <div class="UXCaseLabel mb-sm-4">
                             <p>UX/UI</p>
@@ -356,8 +356,8 @@
                         </a>
                     </div>
 
-                    <!-- Product design -->
-                    <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="productDesign">Product Design</h4>
+                    <!-- CAD Designs -->
+                    <h4 class="d-none d-lg-block py-5 mt-5 text-light text-opacity-75 px-0" id="productDesign">CAD Designs</h4>
 
                     <!-- Boring Box -->
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productBB" aria-expanded="false" aria-controls="productBB">Boring Box<span class="iconFA"></span></button>
@@ -369,7 +369,7 @@
                                 <a class="text-light text-opacity-75 fw-light" href="https://geekhack.org/index.php?topic=109511.0" data-tool-tip="https://geekhack.org/index.php?topic=109511.0" target="_blank">please click here.</a>
                             </h6>
                         </div>
-                        <div class="px-0 container-fluid picturesTrad">
+                        <div class="px-0 container-fluid pictures3Db">
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/202004_Box_01.jpg" data-caption="BoringBox CAD Drawing">
                                 <img data-src="./assets/img/Illustrations/CAD/202004_Box_01.jpg">
                             </a>
@@ -429,7 +429,7 @@
 
                     <!-- Omron 75 -->
                     <button class="imgBtn d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#productO75" aria-expanded="false" aria-controls="productO75">Omron 75<span class="iconFA"></span></button>
-                    <div class="py-4 collapse d-md-block " id="productO75">
+                    <div class="py-4 collapse d-md-block px-0" id="productO75">
                         <div class="align-items-end">
                             <h5 class="playFair text-light text-opacity-75">Omron 75 keyboard</h5>
                             <h6 class="pt-4 pb-3 text-light text-opacity-75 fw-light">
@@ -437,7 +437,7 @@
                                 <a class="text-light text-opacity-75 fw-light" href="https://deskthority.net/viewtopic.php?t=22022" data-tool-tip="https://deskthority.net/viewtopic.php?t=22022" target="_blank">please click here.</a>
                             </h6>
                         </div>
-                        <div class="px-0 container-fluid picturesTrad">
+                        <div class="px-0 container-fluid pictures3Db">
                             <a class="galleryThumb" data-fancybox="gallery" href="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG" data-caption="Omron 75 CAD Drawing">
                                 <img data-src="./assets/img/Illustrations/CAD/201812_Omron75_02.JPG">
                             </a>
