--- a/About.html
+++ b/About.html
@@ -36,7 +36,7 @@
                 <!-- End Google Tag Manager -->
     </head>
 
-    <!-- ########################################################################################################### -->
+    <!-- ################################ -->
 
     <body class="aboutMe">
         <!-- Google Tag Manager (noscript) -->
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_CW.html">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -81,7 +81,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="index.html#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="index.html#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -100,7 +100,7 @@
         <!-- Masthead-->
         <header class="hero-section">
                 <div class="d-flex row aboutMeTitle">
-                    <h1 class="fadeIn-1">3D/Product Designer</h1>
+                    <h1 class="fadeIn-1">UX/UI Product Designer</h1>
                     <h1 class="fadeIn-2">based in Orlando, Florida.</h1>
                 </div>
         </header>
@@ -137,12 +137,14 @@
 
                     <!-- Experience -->
                     <h6 class="playFair my-5 pt-5 fade-in">Experience</h6>
-                    <h5 class="lato pt-3">Huntington Ingalls Industries</h5>
-                    <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Present</p>
+                    <h5 class="lato pt-3">Centene Corporation</h5>
+                    <p class="lato pb-4">UX Designer &nbsp; &#x2022; &nbsp; Sep 2022 - Present</p>
+                    <h5 class="lato">Huntington Ingalls Industries</h5>
+                    <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Sep 2022</p>
                     <h5 class="lato">Corys Thunder</h5>
-                    <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Sep 2015 - Apr 2019</p>
+                    <p class="lato pb-4">Multimedia Specialist &nbsp; &#x2022; &nbsp; Sep 2016 - Apr 2019</p>
                     <h5 class="lato">Delta V Engineering</h5>
-                    <p class="lato pb-4">Junior Animator/Multimedia Specialist &nbsp; &#x2022; &nbsp; May 2013 - May 2015</p>
+                    <p class="lato pb-4">Junior Animator/Multimedia Specialist &nbsp; &#x2022; &nbsp; May 2015 - Sep 2016</p>
                 </div>
 
                 <!-- Skills -->
@@ -207,7 +209,6 @@
                             <p>Unreal Engine</p>
                             <p>Cry Engine</p>
                             <p>Unity</p>
-                            <p>Roblox</p>
                         </div>
                     </div>
                 </div>
@@ -218,7 +219,7 @@
                 <h5>Always down to collaborate when I have time.</h5>
                 <h5>Let's get in touch.</h5>
                 <div class="pt-4">
-                    <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume.pdf" target="_blank">Resume</a>
+                    <a class="hvr-sweep UXCaseButton me-5" href="./assets/Dinh_Leon_Resume_WEB.pdf" target="_blank">Resume</a>
                     <a class="hvr-sweep UXCaseButton" href="mailto:throwawayinbox6789@gmail.com?subject = Portfolio = Message">Contact</a>
                 </div>
                 <div class="pt-5 d-block d-md-flex">
