--- a/CaseStudies/UX_CW.html
+++ b/CaseStudies/UX_CW.html
@@ -71,7 +71,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#projects">Case studies</a></li>
                                             <li><a class="dropdown-item" href="UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="UX_AFA.html">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="UX_AFA.html">Arts-for-all.org</a></li>
                                             <li><a class="dropdown-item" href="#">ChaseWick.com</a></li>
                                         </ul>
                                     </div>
@@ -81,7 +81,7 @@
                                             <li><a class="dropdown-item dropDownCat" href="../index.html#illustrations">Illustrations</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#3D">3D assets</a></li>
                                             <li><a class="dropdown-item d-none d-lg-block" href="../index.html#2D">2D illustrations</a></li>
-                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">Product design</a></li>
+                                            <li><a class="dropdown-item d-none d-lg-block" href="../index.html#productDesign">CAD Designs</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -143,7 +143,7 @@
                     <div class="text-center col-md-4">
                         <h5>Duration</h5>
                         <p>
-                            7 weeks
+                            4 weeks
                         </p>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                         User interviews give us better understanding when it comes to consumers.
                     </h6>
                     <p class="col-lg-9 mx-auto mt-3">
-                        We conducted a total of 4 user interviews to see what people like when it comes to candles and how they prefer to purchase them. These interviews helped us learn more about what people want when it comes to price, scent types, how long they last, if they would prefer a monthly subscription or not, if they care about a percentage of the price going to charity or if they would be interested in recycling or not. 
+                        We conducted a total of 6 user interviews to see what people like when it comes to candles and how they prefer to purchase them. These interviews helped us learn more about what people want when it comes to price, scent types, how long they last, if they would prefer a monthly subscription or not, if they care about a percentage of the price going to charity or if they would be interested in recycling or not. 
                     </p>
                 </div>
             </section>
@@ -302,7 +302,7 @@
                         </h6>
                         <div class="mt-3 mt-lg-0">
                             <p>Our focus on the shopping process went into our development of the site map, where we planned our prototype.</p>
-                            <p>Largely we focused on what would be needed on every page, which is the navbar and footer. Knowing this would be used as the foundation of our prototype, we condensed our points in the bottom right corner into two sections: features available and pages required.</p>
+                            <!-- <p>Largely we focused on what would be needed on every page, which is the navbar and footer. Knowing this would be used as the foundation of our prototype, we condensed our points in the bottom right corner into two sections: features available and pages required.</p> -->
                         </div>
                     </div>
                     <div class="pt-3 py-5 mb-5">
@@ -459,7 +459,7 @@
             <div class="mb-sm-4 UXCaseSwap">
                 <div class="pt-4 pt-sm-0">
                     <p>Previous:</p>
-                    <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
+                    <a class="hvr-sweep" href="./UX_AFA.html">Arts-for-all.org</a>
                 </div>
             </div>
         </section>
