--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
         <!-- Masthead-->
         <header class="hero-section">
                 <div class="d-flex row aboutMeTitle">
-                    <h1 class="fadeIn-1">UX/UI Product Designer</h1>
+                    <h1 class="fadeIn-1">UX/UI Designer</h1>
                     <h1 class="fadeIn-2">based in Orlando, Florida.</h1>
                 </div>
         </header>
@@ -138,7 +138,7 @@
                     <!-- Experience -->
                     <h6 class="playFair my-5 pt-5 fade-in">Experience</h6>
                     <h5 class="lato pt-3">Centene Corporation</h5>
-                    <p class="lato pb-4">UX Designer &nbsp; &#x2022; &nbsp; Sep 2022 - Present</p>
+                    <p class="lato pb-4">Sr. UX Designer &nbsp; &#x2022; &nbsp; Sep 2022 - Present</p>
                     <h5 class="lato">Huntington Ingalls Industries</h5>
                     <p class="lato pb-4">Product Designer / 3D Artist &nbsp; &#x2022; &nbsp; Apr 2019 - Sep 2022</p>
                     <h5 class="lato">Corys Thunder</h5>
