--- a/About.html
+++ b/About.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="pt-5 d-block d-md-flex">
                     <a class="me-4" href="https://www.linkedin.com/in/leonxdinh/" target="_blank">LinkedIn</a>
-                    <a class="me-4" href="https://github.com/kaider/Portfolio" target="_blank">Github</a>
+                    <a class="me-4" href="https://github.com/kaider/Portfolio" target="_blank">GitHub</a>
                     <a class="" href="https://www.artstation.com/kaazzeerr" target="_blank">ArtStation</a>
                 </div>
             </div>
@@ -238,7 +238,7 @@
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
                     <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank" data-tool-tip="LinkedIn"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/" target="_blank" data-tool-tip="Github Repo"> <img src="./assets/img/Logo_GitHub.png" alt="Github"></a>
+                    <a href="https://github.com/kaider/" target="_blank" data-tool-tip="GitHub Repo"> <img src="./assets/img/Logo_GitHub.png" alt="GitHub"></a>
                     <a href="https://www.artstation.com/kaazzeerr" target="_blank" data-tool-tip="ArtStation"> <img src="./assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
