--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -329,7 +329,7 @@
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
                     <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank" data-tool-tip="LinkedIn"> <img src="../assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio" target="_blank" data-tool-tip="Github Repo"> <img src="../assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio" target="_blank" data-tool-tip="GitHub Repo"> <img src="../assets/img/Logo_GitHub.png" alt="GitHub"></a>
                     <a href="https://www.artstation.com/kaazzeerr" target="_blank" data-tool-tip="ArtStation"> <img src="../assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
