--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <p>UX/UI</p>
                             <p>Research</p>
                             <p>Design System</p>
-                            <p>Github</p>
+                            <p>GitHub</p>
                         </div>
                         <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_CW.html">View Case Study</a>
                     </div>
@@ -504,7 +504,7 @@
                 <p class="text-center my-0 px-4">Copyright &copy; Leon Dinh <span id="currentYear"></span></p>
                 <div class="socialIcon">
                     <a href="https://www.linkedin.com/in/leonxdinh/" target="_blank" data-tool-tip="LinkedIn"> <img src="./assets/img/Logo_LinkedIn.png" alt="LinkedIn"></a>
-                    <a href="https://github.com/kaider/Portfolio" target="_blank" data-tool-tip="Github Repo"> <img src="./assets/img/Logo_GitHub.png" alt="LinkedIn"></a>
+                    <a href="https://github.com/kaider/Portfolio" target="_blank" data-tool-tip="GitHub Repo"> <img src="./assets/img/Logo_GitHub.png" alt="GitHub"></a>
                     <a href="https://www.artstation.com/kaazzeerr" target="_blank" data-tool-tip="ArtStation"> <img src="./assets/img/Logo_ArtStation.png" alt="ArtStation"></a>
                 </div>
             </div>
