Fix typos and styling, clarify comment, add tests

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -256,7 +256,7 @@
 
                     <!-- Navigation Usability Test -->
                     <h6 class="playFair mb-3 mb-lg-4 pb-lg-3 pt-5">
-                        We conducted usablity tests regarding navigation.
+                        We conducted usability tests regarding navigation.
                     </h6>
                     <div class="d-md-flex justify-content-between mb-lg-5 pb-5">
                         <div class="col-md-6">
@@ -306,7 +306,7 @@
         <section id="TD_Prototyping">
             <div class="container px-4 px-lg-5">
                 <div class="col-lg-10 mx-auto">
-                    <h6 class="leadingLine text-nav text-mutedmb-5">
+                    <h6 class="leadingLine text-nav text-muted mb-5">
                         Prototyping
                     </h6>
 
@@ -328,7 +328,7 @@
                         <div class="col-md-7">
                             <p>Doing this on both our Desktop and Mobile versions, we did discover some things that we could change to make the use of the website more apparent.</p>
                             <!-- <p>The tests revealed that most of our redesign communicated the intention fairly well, had a pleasing look, and clear navigation.</p> -->
-                            <div class="fw-bold mt-5">Five-second usablity test questions:</div>
+                            <div class="fw-bold mt-5">Five-second usability test questions:</div>
                             <ul>
                                 <li>What is the purpose of the page?</li>
                                 <li>What are the main elements you can recall?</li>
